--- a/JoseRicardoPortfolio.csproj
+++ b/JoseRicardoPortfolio.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="SendGrid" Version="9.29.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.0" />
   </ItemGroup>
 
 </Project>
